//
//  AssessibilityIdentifier.swift
//  CocinaChallenge
//
//  Created by William Brando Estrada Tepec on 26/04/24.
//

import Foundation


struct AssessibilityIdentifier {
    static let splashViewIdentifier = "SplashIdentifier"
    static let  homeIdentifier = "HomeIdentifier"
    static let searchCocina = "SearchCocina"
    static let contentViewRecetasIndentifier = "ContentViewRecetasIndentifier"
    static let detailsDishViewIdentifier = "DetailsDishViewidentifier"
}
